# plugin-freedom-system

./: .continue-here.md  .gitignore  CLAUDE.md  CMakeLists.txt  PLUGINS.md  ROADMAP.md  claude-plugin-guide.md
.claude/: CLAUDE.md  preferences-README.md  system-config.json
.claude/aesthetics/: manifest.json
.claude/agents/: dsp-agent.md  foundation-agent.md  foundation-shell-agent.md  gui-agent.md  shell-agent.md  ui-design-agent.md  validator.md
.claude/commands/: doc-fix.md  implement.md
.claude/docs/: integration-contracts.md
.claude/schemas/: subagent-report.json
.claude/skills/deep-research/: SKILL.md
.claude/skills/plugin-improve/: SKILL.md
.claude/skills/plugin-planning/: SKILL.md  STAGE-0-RESEARCH-PROBLEM.md
.claude/skills/plugin-testing/: SKILL.md
.claude/skills/plugin-workflow/: SKILL.md
.claude/skills/troubleshooting-docs/: SKILL.md
analyses/: master-optimization-roadmap.md
analyses/clarity/: 00-synthesis-and-refactoring-plan.md  consistency-audit-analysis.md  ddd-ubiquitous-language-analysis.md  direction-test-analysis.md  explain-to-stranger-analysis.md  ghost-component-analysis.md  information-architecture-analysis.md  namespace-collision-analysis.md  role-based-nomenclature-analysis.md  taxonomy-tree-analysis.md
analyses/first-principles/: first-principles-eisenhower-audit.md
analyses/lateral-thinking/: lateral-thinking-eisenhower-audit.md
architecture/: 06-state-architecture.md  09-file-system-design.md
implementation-notes/: gui-optional-flow-testing.md
plan/: phase-0-plan.md  phase-1-plan.md  phase-2-plan.md  phase-3-plan.md  phase-6-plan.md
plugins/Drum808/: .continue-here.md
plugins/DrumRoulette/: .continue-here.md
plugins/GrooveScout/: .continue-here.md  CHANGELOG.md  CMakeLists.txt
plugins/GrooveScout/.ideas/: architecture.md  creative-brief.md  parameter-spec-draft.md  parameter-spec.md  plan.md
plugins/GrooveScout/.ideas/mockups/: v1-ui-test.html  v1-ui.yaml  v2-CMakeLists-SNIPPET.txt  v2-PluginEditor-TEMPLATE.cpp  v2-PluginEditor-TEMPLATE.h  v2-integration-checklist.md  v2-ui-test.html  v2-ui.html  v2-ui.yaml  v3-ui-test.html  v3-ui.yaml  v4-ui-test.html  v4-ui.yaml  v5-ui-test.html  v5-ui.yaml
plugins/GrooveScout/Source/: GrooveScoutAnalyzer.cpp  GrooveScoutAnalyzer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/GrooveScout/Source/ui/public/: index.html
plugins/LushVerb/: .continue-here.md
plugins/MinimalKick/: .continue-here.md
plugins/RadioMusic/: .continue-here.md
plugins/TapeAge/: .continue-here.md  CMakeLists.txt
procedures/commands/: implement.md
procedures/core/: checkpoint-system.md
procedures/skills/: context-resume.md  plugin-workflow.md
prompts/: 002-fix-architecture-generation-gap.md  002-restructure-skills-align-documentation.md
scripts/: build-and-install.sh
(+58 files in other folders)
